src/test/ui/type/type-mismatch-same-crate-name.stderr
error[E0308]: mismatched types
  --> $DIR/type-mismatch-same-crate-name.rs:16:20
   |
LL |         a::try_foo(foo2);
   |         ---------- ^^^^ expected struct `main::a::Foo`, found a different struct `main::a::Foo`
   |         |
   |         arguments to this function are incorrect
   |
   = note: struct `main::a::Foo` and struct `main::a::Foo` have similar names, but are actually distinct types
note: struct `main::a::Foo` is defined in crate `crate_a2`
  --> $DIR/auxiliary/crate_a2.rs:1:1
   |
LL | pub struct Foo;
   | ^^^^^^^^^^^^^^
note: struct `main::a::Foo` is defined in crate `crate_a1`
  --> $DIR/auxiliary/crate_a1.rs:1:1
   |
LL | pub struct Foo;
   | ^^^^^^^^^^^^^^
   = note: perhaps two different versions of crate `crate_a1` are being used?
note: function defined here
  --> $DIR/auxiliary/crate_a1.rs:10:8
   |
LL | pub fn try_foo(x: Foo){}
   |        ^^^^^^^

error[E0308]: mismatched types
  --> $DIR/type-mismatch-same-crate-name.rs:20:20
   |
LL |         a::try_bar(bar2);
   |         ---------- ^^^^ expected trait `main::a::Bar`, found a different trait `main::a::Bar`
   |         |
   |         arguments to this function are incorrect
   |
   = note: expected struct `Box<(dyn main::a::Bar + 'static)>`
              found struct `Box<dyn main::a::Bar>`
   = note: perhaps two different versions of crate `crate_a1` are being used?
note: function defined here
  --> $DIR/auxiliary/crate_a1.rs:11:8
   |
LL | pub fn try_bar(x: Box<Bar>){}
   |        ^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
